--- a/vignettes/TraitDatabaseHarmonization.Rmd
+++ b/vignettes/TraitDatabaseHarmonization.Rmd
@@ -153,7 +153,7 @@ saveRDS(db_post, file_out)
 As mentioned in the introduction, here it is assumed that a set of plant trait databases have been harmonized. In our case, harmonized data files have been stored in the following path:
 
 ```{r}
-harmonized_trait_path <- "~/OneDrive/mcaceres_work/model_development/medfate_parameterization/traits_and_models/data/harmonized_trait_sources"
+harmonized_trait_path <- paste0(DB_path, "data/harmonized_trait_sources")
 ```
 
 We can list the set of harmonized sources using:
